--- a/app/404.html
+++ b/app/404.html
@@ -28,7 +28,7 @@ permalink: /404.html
          // https://username.github.io/repo-name/one/two?a=b&c=d#qwe becomes
          // https://username.github.io/repo-name/?p=/one/two&q=a=b~and~c=d#qwe
          // Otherwise, leave pathPrefix as false.
-         var pathPrefix = false;
+         var pathPrefix = true;
 
          var l = window.location;
          l.replace(
