Hotfix: redirect 404 and bare index to /fa

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,6 @@
----
-layout: home
-lang: fa
----
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="refresh" content="0; url=http://iranopendata.github.io/fa">
+        <meta charset="utf-8">
+</html>
